--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1623,10 +1623,10 @@ config USERSPACE_VOLTAGE_CONTROL
 	  Userspace Voltage Control
 
 config MSM_SLEEPER
-	bool "Limit max frequency while screen is off"
-	default n
+	bool "Limit max frequency and shut off cores while screen is off"
+	default y
 	help
-	  Limit max frequency while screen is off
+	  Limit max frequency and shut off cores while screen is off
 
 config MSM_AVS_HW
 	bool "Enable Adaptive Voltage Scaling (AVS)"
