--- a/arch/arm/configs/quanta_defconfig
+++ b/arch/arm/configs/quanta_defconfig
@@ -1,8 +1,8 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-QuantaReborn-V1"
+CONFIG_LOCALVERSION="-QuantaReborn-V2"
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_KERNEL_XZ=y
+CONFIG_KERNEL_LZ4=y
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
