--- a/arch/arm/configs/quanta_defconfig
+++ b/arch/arm/configs/quanta_defconfig
@@ -2,7 +2,7 @@
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-QuantaReborn-V2"
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_KERNEL_LZ4=y
+CONFIG_KERNEL_XZ=y
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
