defconfig: Bump to 2.1

--- a/arch/arm/configs/quanta_defconfig
+++ b/arch/arm/configs/quanta_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-QuantaReborn-V2"
+CONFIG_LOCALVERSION="-QuantaReborn-V2.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_XZ=y
 # CONFIG_SWAP is not set
@@ -34,7 +34,7 @@ CONFIG_JUMP_LABEL=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
-CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_MAPLE=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -144,7 +144,7 @@ CONFIG_TCP_CONG_LP=y
 CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_DEFAULT_HTCP=y
+CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
